# oasyce-samantha

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: APP_ADAPTER_EXTRACTION.md  ARCHITECTURE.md  DESIGN_V2.md
oasyce_samantha/: __init__.py  __main__.py  annotator.py  app_client.py  channel.py  cli.py  collective.py  commands.py  commitments.py  constitution.py  http.py  intention.py  loop.py  memory.py  profiles.py  rules.py  server.py  streams.py  tools.py  world.py  ws_client.py
oasyce_samantha/adapters/: __init__.py  base.py  legacy_app.py  legacy_app_surface.py  legacy_app_tools.py  local.py
tests/: test_adapters.py  test_annotator.py  test_app_channel.py  test_collective.py  test_commitments.py  test_companion_memory.py  test_flush.py  test_retrieval.py  test_samantha.py  test_self_memory.py  test_streaming.py  test_streams.py  test_world.py
